--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<nav> 
 				<ul class="clearfix">
 					<li><a class="what" href="#">What ?</a></li>
-					<li><a class="new" href="#">+ New Game</a></li>
+					<li><a id="new" class="new" href="#">+ New Game</a></li>
 				</ul>
 			</nav>
 			
@@ -57,7 +57,7 @@
 
 			<form>
 				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
-      			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
+      			<input type="button" id="guessButton" class="button" name="text" value="Guess"/>
 			</form>
 			
       		<p>Guess #<span id="count">0</span>!</p>
