--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<h2 id="feedback">Make your Guess!</h2>
 
 			<form>
-				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
+				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" required/>
       			<input type="button" id="guessButton" class="button" name="text" value="Guess"/>
 			</form>
 			
